# LocalizerX

./: .gitignore  AGENT.md  CHANGELOG.md  CHANGELOG_PLURALS.md  CLAUDE.md  CONTRIBUTING.md  CUSTOM_PROMPTS.md  GEMINI.md  LICENSE  PLURALS_IMPLEMENTATION.md  PLURAL_USAGE_GUIDE.md  README.md  plan.md  pyproject.toml
.claude/: settings.local.json
docs/plans/: 2026-02-12-delete-languages-design.md  2026-02-12-delete-languages.md
examples/: Localizable.xcstrings  Plurals.xcstrings
examples/metadata/: README.md
localizerx/: __init__.py  __main__.py  cli.py  config.py
localizerx/adapters/: repository.py
localizerx/cli/: __init__.py  agent.py  android.py  chrome.py  delete.py  frameit.py  i18n.py  metadata.py  screenshots.py  translate.py  utils.py
localizerx/io/: __init__.py  android.py  extension.py  frameit.py  i18n.py  metadata.py  screenshots.py  xcstrings.py
localizerx/parser/: __init__.py  android_model.py  app_context.py  extension_model.py  frameit_model.py  i18n_model.py  metadata_model.py  model.py  screenshots_model.py
localizerx/translator/: __init__.py  base.py  extension_prompts.py  frameit_prompts.py  gemini_adapter.py  (+3 more)
tests/: __init__.py  test_agent_cli.py  test_android_io.py  test_android_model.py  test_chrome_translation.py  test_cli.py  test_cli_refresh.py  test_config.py  test_context_extraction.py  test_delete.py  test_extension_io.py  test_extension_model.py  test_frameit_cli.py  test_frameit_io.py  test_gemini_adapter_context.py  test_i18n_io.py  test_i18n_model.py  test_locale.py  test_mark_empty.py  test_metadata_cli.py  test_metadata_io.py  test_metadata_limits.py  test_metadata_translation_scenarios.py  test_model.py  test_model_domain.py  test_placeholders.py  test_plural_rules.py  test_plurals_parsing.py  test_remove_language.py  test_screenshots_io.py  test_screenshots_model.py  test_screenshots_prompts.py  test_xcstrings.py  test_xcstrings_formatting.py  test_xcstrings_plurals.py  test_xcstrings_translation_bugs.py
(+21 files in other folders)
