[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localizerx"
version = "0.1.0"
description = "CLI tool for translating Xcode String Catalogs using Gemini API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "LocalizerX Team"}
]
keywords = ["xcode", "localization", "translation", "xcstrings", "gemini", "ios"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Localization",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.scripts]
localizerx = "localizerx.cli:app"
lox = "localizerx.cli:app"

[project.urls]
Homepage = "https://github.com/localizerx/localizerx"
Repository = "https://github.com/localizerx/localizerx"

[tool.setuptools.packages.find]
where = ["."]
include = ["localizerx*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Prompt templates contain long lines inside triple-quoted strings
"localizerx/translator/*prompts*.py" = ["E501"]
"localizerx/translator/gemini_adapter.py" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
